--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
 	"dependencies": {
 		"@tanstack/react-table": "^8.9.2",
 		"axios": "^1.4.0",
+		"base-64": "^1.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-query": "^3.39.3",
-		"react-router-dom": "^6.12.1"
+		"react-router-dom": "^6.12.1",
+		"utf8": "^3.0.0"
 	},
 	"devDependencies": {
+		"@types/base-64": "^1.0.0",
 		"@types/react": "^18.0.37",
 		"@types/react-dom": "^18.0.11",
+		"@types/utf8": "^3.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.59.0",
 		"@typescript-eslint/parser": "^5.59.0",
 		"@vitejs/plugin-react": "^4.0.0",
